add back off probability and separate configuration